--- a/client/src/components/Input/Input.sass
+++ b/client/src/components/Input/Input.sass
@@ -6,8 +6,7 @@
     &__main
         height: 52px
 
-        background: #FAFAFA
-        opacity: 0.5
+        background: rgba(250,250,250, 0.5)
         box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.15)
         border-radius: 3px
 
