pre-ready sign page

--- a/client/src/components/Button/Button.sass
+++ b/client/src/components/Button/Button.sass
@@ -19,3 +19,13 @@
         background: none !important
 
         color: #416D49
+
+    &_sign
+        height: 64px
+
+        background: #FFFFFF
+        box-shadow: 5px 5px 5px rgba(28, 28, 28, 0.25)
+        border-radius: 5px
+
+        color: #416D49
+        width: 100%
