--- a/client/src/components/Input/Input.sass
+++ b/client/src/components/Input/Input.sass
@@ -21,6 +21,13 @@
         outline: none
         border: none
 
+        &_sign
+            height: 79px
+
+            background: rgba(250, 250, 250, 0.45)
+            box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.15)
+            border-radius: 3px
+
     &__label
         font-size: 24px
 
