--- a/client/src/modules/ShowTrucks/ShowTrucks.sass
+++ b/client/src/modules/ShowTrucks/ShowTrucks.sass
@@ -1,5 +1,10 @@
 .show-trucks
 
+    &_grid
+        display: grid
+
+        gap: 10px
+
     &__item
         width: 170px
         height: 50px
@@ -15,6 +20,8 @@
 
         color: #FAFAFA
 
-        &_green
-
+        &_active
             background: #416D49
+
+        &_not-active
+            background-color: rgba(0, 0, 0, 0.25)
