--- a/client/src/modules/DeliveryAddresses/DeliveryAddresses.sass
+++ b/client/src/modules/DeliveryAddresses/DeliveryAddresses.sass
@@ -14,6 +14,10 @@
 
         margin-bottom: 24px
 
+    &__items
+        max-height: 60vh
+        overflow-y: scroll
+
     &__item
         background: #FFFFFF
         border-radius: 5px
