--- a/client/src/pages/MapPage/MapPage.sass
+++ b/client/src/pages/MapPage/MapPage.sass
@@ -1,16 +1,27 @@
 .map
     position: relative
 
+    &__footer
+        position: absolute
+        bottom: 0
+
+        background: #416D49
+        opacity: 0.45
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25)
+        height: 50px
+
+        width: 100%
+
     &__container
 
         &-left
             position: absolute
-            top: 5%
+            top: 9%
             left: 5%
 
         &-right
             position: absolute
-            top: 5%
+            top: 9%
             right: 5%
 
         &-center
