--- a/client/src/components/Button/Button.sass
+++ b/client/src/components/Button/Button.sass
@@ -1,5 +1,5 @@
 .button
-    height: 50px
+    height: 40px
 
     background: #416D49
     box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.15)
@@ -19,3 +19,13 @@
         background: none !important
 
         color: #416D49
+
+    &_sign
+        height: 64px
+
+        background: #FFFFFF
+        box-shadow: 5px 5px 5px rgba(28, 28, 28, 0.25)
+        border-radius: 5px
+
+        color: #416D49
+        width: 100%
