--- a/client/src/components/Input/Input.sass
+++ b/client/src/components/Input/Input.sass
@@ -4,10 +4,9 @@
     width: 100%
 
     &__main
-        height: 52px
+        height: 42px
 
-        background: #FAFAFA
-        opacity: 0.5
+        background: rgba(250,250,250, 0.5)
         box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.15)
         border-radius: 3px
 
@@ -15,15 +14,22 @@
         align-items: center
 
         font-weight: 400
-        font-size: 24px
+        font-size: 20px
 
         padding-left: 14px
 
         outline: none
         border: none
 
+        &_sign
+            height: 79px
+
+            background: rgba(250, 250, 250, 0.45)
+            box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.15)
+            border-radius: 3px
+
     &__label
-        font-size: 24px
+        font-size: 20px
 
         letter-spacing: -0.005em
 
